k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: file-service
